# rust_geodistances

./: .buildinfo  .gitignore  Cargo.toml  Makefile  README.md  cookiecutter.json  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  rust_geodistances.config.html  rust_geodistances.decorators.html  rust_geodistances.html  search.html  searchindex.js
.github/workflows/: CI.yml
_sources/: index.rst.txt  rust_geodistances.decorators.rst.txt
docs/: Makefile
docs/source/: conf.py  index.rst  modules.rst  rust_geodistances.config.rst  rust_geodistances.rst
experiments/: interactive_distance_map.py  test_scipy_vs_rust.py
src/py/: interactive_distance_map.py
src/py/rust_geodistances/: __init__.py
src/py/rust_geodistances/config/: __init__.py
src/py/rust_geodistances/decorators/: timed.py
src/rust/: config.rs  lib.rs  main.rs  tests.rs
src/rust/args/: mod.rs
src/rust/args/stdin/: mod.rs
src/rust/calc_models/: config.rs  haversine.rs  mod.rs  traits.rs  vincenty.rs
src/rust/compatibility/: conversions.rs  enums.rs  func.rs  mod.rs  python.rs
src/rust/data/: mod.rs  structs.rs  structs2.rs  traits.rs
src/rust/data_alt/: mod.rs  structs.rs
src/rust/data_old/: mod.rs  structs.rs  traits.rs
src/rust/geodistances/: cartesian.rs  config.rs  haversine.rs  mod.rs  traits.rs  vincenty.rs
src/rust/input_output/: mod.rs
src/rust/input_output/stdin/: mod.rs
src/rust/input_output/stdout/: mod.rs
src/rust/py_compatibility/: enums.rs  frompyobject.rs  intopy.rs  mod.rs
src/rust/tests/: mod.rs
tests/: conftest.py  test_against_sklearn.py  test_distance.py  test_env.py  test_offset_bounds.py
tests/data/: random_latlngs_dual.pickle  random_latlngs_single.pickle
