[package]
name = "rust_geodistances"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_geodistances"
path = "src/rust/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-format = "0.4.0"
timeit = "0.1.2"
strum = { version = "0.24", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }
serde-pickle = "1.1.1"
serde_with = "2.0.1"
