[package]
name = "rust_geodistances"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust_geodistances"
path = "src/rust/main.rs"

[lib]
name = "lib_rust_geodistances"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module"] }
duplicate = "0.4"
ndarray = { version = "0.15", features = ["rayon"] }
num-format = "0.4"
rayon = "1.6"
strum = { version = "0.24", features = ["derive"] }
timeit = "0.1"

ndarray_numeric = {git = "https://github.com/denwong47/ndarray_numeric.git"}


[package.metadata.maturin]
python-source = "src/py"
name = "rust_geodistances.lib_rust_geodistances"
