[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rust-geodistances"
authors = [
    {name = "Denny Wong Pui-chung", email = "denwong47@hotmail.com"},
]
version = "0.1.0"
description = "Python package for Geodistance calculations with both Haversine and Vincenty, using a Rust backend."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
]
dependencies= [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pydata-sphinx-theme",
    "pytest",
    "sphinx",
]

[project.urls]
repository = "https://github.com/denwong47/rust_geodistances"

[tool.setuptools.packages.find]
where = ["src/py", "bin"]
namespaces = true

[tool.setuptools.package-data]
rust_backend = ["*"]

[tool.isort]
py_version = 39
profile = "black"
sections=[
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "FORESTREET",
    "LOCALFOLDER",
]
known_third_party = [
    "numpy",
]

[tool.pyright]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "local: marks tests as only intended to be run locally as opposed to e.g. on GitHub actions",
]
